syntax = "proto3";
package pulse;
option java_package = "com.kitware.physiology.pulse";

enum eAirwayMode
{
  Free                                                     = 0;
  AnesthesiaMachine                                        = 1;
  Inhaler                                                  = 2;
  MechanicalVentilator                                     = 3;
}
